--- a/NoSQL/dynamoDBAssignment.ipynb
+++ b/NoSQL/dynamoDBAssignment.ipynb
@@ -46,8 +46,8 @@
    "outputs": [],
    "source": [
     "s3 = boto3.resource('s3',\n",
-    "    aws_access_key_id='AKIA4KMJ4CSHXJKKE4QN',\n",
-    "    aws_secret_access_key='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'\n",
+    "    aws_access_key_id='',\n",
+    "    aws_secret_access_key=''\n",
     ")"
    ]
   },
@@ -147,8 +147,8 @@
    "source": [
     "dyndb = boto3.resource('dynamodb',\n",
     "region_name='us-west-2',\n",
-    "aws_access_key_id='AKIA4KMJ4CSHXJKKE4QN',\n",
-    "aws_secret_access_key='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'\n",
+    "aws_access_key_id='',\n",
+    "aws_secret_access_key=''\n",
     ")"
    ]
   },
